Use Settings Widget instead "Connect to Display" Screen + remember/persist display settings between application runs

--- a/led/apps/client/screens/main_screen.kv
+++ b/led/apps/client/screens/main_screen.kv
@@ -17,7 +17,7 @@
             text: "Open Animation"
             on_release: app.root.current = 'file_chooser_screen'
         AutoTextSizeButton:
-            text: "Connect to Display"
-            on_release: app.root.current = 'connect_display_screen'
-        AutoTextSizeButton:
             text: "Live"
+        AutoTextSizeButton:
+            text: "Panel Settings"
+            on_release: app.open_settings()
