--- a/led/apps/client/screens/project_screen.kv
+++ b/led/apps/client/screens/project_screen.kv
@@ -19,5 +19,9 @@
 
         EffectScreenManager:
             id: effect_screen_manager
-        DisplayWidget:
-            id: display_widget
+
+        FloatLayout:
+            TouchWidget:
+                id: touch_widget
+            DisplayWidget:
+                id: display_widget
