--- a/led/apps/client/led.kv
+++ b/led/apps/client/led.kv
@@ -1,4 +1,10 @@
 #:kivy 1.9.0
+#:import TextEffectScreen screens.text_effect_screen
+#:import RainbowEffectScreen screens.rainbow_effect_screen
+#:import FileChooserScreen screens.file_chooser_screen
+#:import ProjectScreen screens.project_screen
+#:import MainScreen screens.main_screen
+#:import PaintEffectScreen screens.paint_effect_screen
 
 <LedScreenManager>
     MainScreen:
