Adjustments for Android build: - Moving main.py to the root of led - adding exception in screens code - adding font file - adding build script - build.sh - adjusted buildozer spec - added numpy and pil - removed pillow specific method calls (frombytes, getbytes)

--- a/led/apps/client/screens/project_screen.kv
+++ b/led/apps/client/screens/project_screen.kv
@@ -1,11 +1,12 @@
 #:import DisplayWidget ui.display_widget
+#:import TouchWidget ui.touch_widget
 
 <ProjectScreen>
     name: 'project_screen'
     BoxLayout:
         orientation: 'vertical'
         BoxLayout:
-            size_hint: 1, 0.1
+            size_hint: 1, 0.2
             orientation: 'horizontal'
             AutoTextSizeButton:
                 text: "Main Menu"
