--- a/led/apps/client/screens/main_screen.kv
+++ b/led/apps/client/screens/main_screen.kv
@@ -8,7 +8,7 @@
         spacing: 10
         orientation: 'vertical'
         Image:
-            source: 'resources\keesware_led_banner.gif'
+            source: root.get_banner_path()
             allow_stretch: True
             anim_delay: 1/10.0
             keep_ratio: False
